<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#1345A3"
    tools:context=".networkdeviceprogrammer"
    android:id="@+id/relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Network_Device_Programmer"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Router"
        android:id="@+id/router"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="routerCfg"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        android:id="@+id/switches"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/router"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Access_Point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/accessPoint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/switches"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

