<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rtrconfig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jchitwood.networkdevice.rtrconfig">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Network_Device_Programmer"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Router"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="28dp"
        android:id="@+id/textView3"
        android:layout_toStartOf="@+id/radioButton"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <RadioButton
        android:text="@string/Existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioButton"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginEnd="23dp"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:duplicateParentState="false" />

    <RadioButton
        android:text="@string/New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_marginEnd="20dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toStartOf="@+id/radioButton2" />

    <TextView
        android:text="@string/Model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_toStartOf="@+id/radioButton"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="40dp"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:id="@+id/checkedTextView"
        android:textSize="18sp"
        android:layout_alignEnd="@+id/radioButton2"
        android:layout_toEndOf="@+id/textView4" />
</RelativeLayout>